--- a/views/index.ejs
+++ b/views/index.ejs
@@ -849,8 +849,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-8">
-                    <h1>최고의 강의를 만나보세요</h1>
-                    <p>다양한 분야의 전문가들이 제공하는 양질의 강의로 지식을 쌓고 성장하세요.</p>
+                    <h1>미림에 오신걸 환영해요</h1>
+                    <p>마스 일개 부원이 제공하는 개발 강의자료 플랫폼입니다</p>
                     <a href="#courses" class="btn hero-btn">
                         <i class="fas fa-play-circle me-2"></i>강의 둘러보기
                     </a>
@@ -1037,9 +1037,9 @@
                 <div class="col-lg-4 col-md-4">
                     <h5>연락처</h5>
                     <ul class="footer-links">
-                        <li><i class="fas fa-envelope me-2"></i> contact@example.com</li>
-                        <li><i class="fas fa-phone me-2"></i> 02-123-4567</li>
-                        <li><i class="fas fa-map-marker-alt me-2"></i> 서울특별시 강남구</li>
+                        <li><i class="fas fa-envelope me-2"></i> s2460@e-mirim.hs.kr</li>
+                        <li><i class="fas fa-phone me-2"></i> 010-9145-5226</li>
+                        <li><i class="fas fa-map-marker-alt me-2"></i> 미림마이스터고</li>
                     </ul>
                     <div class="mt-3">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
